# TaskManagerAPI

./: .env.example  .gitignore  Docker-compose.yml  Dockerfile  database.py  main.py  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 2026bd30ee71_initial.py  7ebed770b45c_add_notification_sent_into_task.py  7f2e7988a31b_add_creation_date_into_task.py  acd9c9df58ac_add_telegram_id_into_user.py
auth/: auth_router.py  auth_utils.py
bot/: main.py
core/: celery_config.py  http_client.py  redis_config.py
models/: models.py
routers/: notifications.py  task.py
schemas/: tasks.py  users.py
services/: sse_notifications.py
tests/: conftest.py  test_tasks.py
